--- a/exploratory_data_analysis.html
+++ b/exploratory_data_analysis.html
@@ -364,6 +364,11 @@ display: none;
 ## Year       49409   2022 2018 2023     5   2
 ## State.ANSI 49409     26   17   29    12  11</code></pre>
 <pre><code>## Warning: NAs introduced by coercion</code></pre>
+<pre><code>##  [1] &quot;Program&quot;          &quot;Year&quot;             &quot;Period&quot;           &quot;Week.Ending&quot;     
+##  [5] &quot;Geo.Level&quot;        &quot;State&quot;            &quot;State.ANSI&quot;       &quot;Ag.District&quot;     
+##  [9] &quot;Ag.District.Code&quot; &quot;County&quot;           &quot;County.ANSI&quot;      &quot;Zip.Code&quot;        
+## [13] &quot;Region&quot;           &quot;Watershed&quot;        &quot;Commodity&quot;        &quot;Data.Item&quot;       
+## [17] &quot;Domain&quot;           &quot;Domain.Category&quot;  &quot;Value&quot;            &quot;CV&quot;</code></pre>
 </div>
 <div id="crops" class="section level2">
 <h2>Crops</h2>
@@ -371,6 +376,11 @@ display: none;
 <pre><code>##                 n median  min  max range IQR
 ## Year       188507   2021 2018 2023     5   3
 ## State.ANSI 188507     26   17   29    12   8</code></pre>
+<pre><code>##  [1] &quot;Program&quot;          &quot;Year&quot;             &quot;Period&quot;           &quot;Week.Ending&quot;     
+##  [5] &quot;Geo.Level&quot;        &quot;State&quot;            &quot;State.ANSI&quot;       &quot;Ag.District&quot;     
+##  [9] &quot;Ag.District.Code&quot; &quot;County&quot;           &quot;County.ANSI&quot;      &quot;Zip.Code&quot;        
+## [13] &quot;Region&quot;           &quot;Watershed&quot;        &quot;Commodity&quot;        &quot;Data.Item&quot;       
+## [17] &quot;Domain&quot;           &quot;Domain.Category&quot;  &quot;Value&quot;            &quot;CV&quot;</code></pre>
 </div>
 <div id="demographics" class="section level2">
 <h2>Demographics</h2>
@@ -378,6 +388,11 @@ display: none;
 <pre><code>##                n median  min  max range IQR
 ## Year       85234   2022 2019 2023     4   0
 ## State.ANSI 85234     26   17   29    12  11</code></pre>
+<pre><code>##  [1] &quot;Program&quot;          &quot;Year&quot;             &quot;Period&quot;           &quot;Week.Ending&quot;     
+##  [5] &quot;Geo.Level&quot;        &quot;State&quot;            &quot;State.ANSI&quot;       &quot;Ag.District&quot;     
+##  [9] &quot;Ag.District.Code&quot; &quot;County&quot;           &quot;County.ANSI&quot;      &quot;Zip.Code&quot;        
+## [13] &quot;Region&quot;           &quot;Watershed&quot;        &quot;Commodity&quot;        &quot;Data.Item&quot;       
+## [17] &quot;Domain&quot;           &quot;Domain.Category&quot;  &quot;Value&quot;            &quot;CV&quot;</code></pre>
 </div>
 <div id="economics" class="section level2">
 <h2>economics</h2>
@@ -385,6 +400,11 @@ display: none;
 <pre><code>##                n median  min  max range IQR
 ## Year       81937   2022 2018 2023     5   0
 ## State.ANSI 81937     26   17   29    12  11</code></pre>
+<pre><code>##  [1] &quot;Program&quot;          &quot;Year&quot;             &quot;Period&quot;           &quot;Week.Ending&quot;     
+##  [5] &quot;Geo.Level&quot;        &quot;State&quot;            &quot;State.ANSI&quot;       &quot;Ag.District&quot;     
+##  [9] &quot;Ag.District.Code&quot; &quot;County&quot;           &quot;County.ANSI&quot;      &quot;Zip.Code&quot;        
+## [13] &quot;Region&quot;           &quot;Watershed&quot;        &quot;Commodity&quot;        &quot;Data.Item&quot;       
+## [17] &quot;Domain&quot;           &quot;Domain.Category&quot;  &quot;Value&quot;            &quot;CV&quot;</code></pre>
 </div>
 <div id="environmental" class="section level2">
 <h2>environmental</h2>
@@ -392,6 +412,11 @@ display: none;
 <pre><code>##                n median  min  max range IQR
 ## Year       19114   2021 2018 2023     5   3
 ## State.ANSI 19114     26   26   29     3   0</code></pre>
+<pre><code>##  [1] &quot;Program&quot;          &quot;Year&quot;             &quot;Period&quot;           &quot;Week.Ending&quot;     
+##  [5] &quot;Geo.Level&quot;        &quot;State&quot;            &quot;State.ANSI&quot;       &quot;Ag.District&quot;     
+##  [9] &quot;Ag.District.Code&quot; &quot;County&quot;           &quot;County.ANSI&quot;      &quot;Zip.Code&quot;        
+## [13] &quot;Region&quot;           &quot;Watershed&quot;        &quot;Commodity&quot;        &quot;Data.Item&quot;       
+## [17] &quot;Domain&quot;           &quot;Domain.Category&quot;  &quot;Value&quot;            &quot;CV&quot;</code></pre>
 </div>
 
 
