Upload Meeting Notes from 9/9/2024

--- a/exploratory_data_analysis.html
+++ b/exploratory_data_analysis.html
@@ -395,7 +395,7 @@ display: none;
 ## [17] &quot;Domain&quot;           &quot;Domain.Category&quot;  &quot;Value&quot;            &quot;CV&quot;</code></pre>
 </div>
 <div id="economics" class="section level2">
-<h2>economics</h2>
+<h2>Economics</h2>
 <p>Analysis on the economics.csv file:</p>
 <pre><code>##                n median  min  max range IQR
 ## Year       81937   2022 2018 2023     5   0
@@ -407,7 +407,7 @@ display: none;
 ## [17] &quot;Domain&quot;           &quot;Domain.Category&quot;  &quot;Value&quot;            &quot;CV&quot;</code></pre>
 </div>
 <div id="environmental" class="section level2">
-<h2>environmental</h2>
+<h2>Environmental</h2>
 <p>Analysis on the environmental.csv file:</p>
 <pre><code>##                n median  min  max range IQR
 ## Year       19114   2021 2018 2023     5   3
